@@ -42,7 +42,7 @@ module Netzke
     module InstanceMethods
       def css_missing_code(cached = [])
         code = dependency_classes.inject("") do |r,k|
-          cached.include?(k) ? r : r + constantize_class_name(k).css_code(cached)
+          cached.include?(k.js_xtype) ? r : r + k.css_code(cached)
         end
         code.blank? ? nil : code
       end
