@@ -16,6 +16,8 @@ class ComponentLoader < Netzke::Base
     :lazy_loading => true
   }
 
+  component :some_composite, :lazy_loading => true
+
   js_method :on_load_with_feedback, <<-JS
     function(){
       this.loadComponent({name: 'simple_component', callback: function(){
@@ -28,16 +30,24 @@ class ComponentLoader < Netzke::Base
 
   action :load_window_with_simple_component
 
+  action :load_composite
+
   js_properties(
     :load_mask_msg => "Loading...",
     :title => "Component Loader",
     :layout => "fit",
-    :bbar => [{:text => "Load component", :ref => "../button"}, {:text => "Load in window", :ref => "../loadInWindowButton"}, :load_with_feedback.action, :load_window_with_simple_component.action]
+    :bbar => [{:text => "Load component", :ref => "../button"}, {:text => "Load in window", :ref => "../loadInWindowButton"}, :load_with_feedback.action, :load_window_with_simple_component.action, :load_composite.action]
   )
 
   js_method :on_load_window_with_simple_component, <<-JS
     function(params){
       this.loadComponent({name: "window_with_simple_component"});
+    }
+  JS
+
+  js_method :on_load_composite, <<-JS
+    function(params){
+      this.loadComponent({name: "some_composite"});
     }
   JS
 
